--- a/segment05/Makefile
+++ b/segment05/Makefile
@@ -1,13 +1,30 @@
 all: S5_rep1_1.txt S5_rep1_2.txt S5_rep2_1.txt S5_rep2_2.txt
 
-rep1:
+SRR5680236_1.fastq.gz:
+	wget ftp://ftp.sra.ebi.ac.uk/vol1/fastq/SRR568/006/SRR5680236/SRR5680236_1.fastq.gz
+	echo "6bc33c10b60c775f9ca5eb800145d401  SRR5680236_1.fastq.gz" | md5sum -c
+
+SRR5680236_2.fastq.gz:
+	wget ftp://ftp.sra.ebi.ac.uk/vol1/fastq/SRR568/006/SRR5680236/SRR5680236_2.fastq.gz
+	echo "51e9b3e420d77ee878188ff05acb1c62  SRR5680236_2.fastq.gz" | md5sum -c
+
+SRR5680237_1.fastq.gz:
+	wget ftp://ftp.sra.ebi.ac.uk/vol1/fastq/SRR568/007/SRR5680237/SRR5680237_1.fastq.gz
+	echo "96e9ed4280b61baef6647fb307d94c92  SRR5680237_1.fastq.gz" | md5sum -c
+
+SRR5680237_2.fastq.gz:
+	wget ftp://ftp.sra.ebi.ac.uk/vol1/fastq/SRR568/007/SRR5680237/SRR5680237_2.fastq.gz
+	echo "aa5c2704fe9b8e6c809c1a6308d72852  SRR5680237_2.fastq.gz" | md5sum -c
+
+rep1: SRR5680236_1.fastq.gz SRR5680236_2.fastq.gz
 	../preprocess.py S5specs.txt \
-		/data/GF5_1_12302_AAGACG_read1.fastq.gz \
-		/data/GF5_1_12302_AAGACG_read2.fastq.gz rep1
-rep2:
+		SRR5680236_1.fastq.gz \
+		SRR5680236_2.fastq.gz rep1
+
+rep2: SRR5680237_1.fastq.gz SRR5680237_2.fastq.gz
 	../preprocess.py S5specs.txt \
-		/data/GF5_2_12303_GGATGT_read1.fastq.gz \
-		/data/GF5_2_12303_GGATGT_read2.fastq.gz rep2
+		SRR5680237_1.fastq.gz \
+		SRR5680237_2.fastq.gz rep2
 
 S5_rep1_1.txt S5_rep1_2.txt: rep1
 	../do_starcode.sh rep1
